syntax = "proto3";

package api.user.v1;
option go_package = "kratos_sample/api/user/v1;v1";
option java_multiple_files = true;
option java_package = "api.user.v1";

service User {
	rpc GetUserGroupId (GetUserGroupRequest) returns (GroupIdResponse);
}

message GetUserGroupRequest {
	int64 user_id = 1;
}
message GroupIdResponse {
	int64 group_id = 1;
}
